--- a/app/src/main/res/layout/activity_main_storage.xml
+++ b/app/src/main/res/layout/activity_main_storage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".MainActivityStorage"
     android:orientation="vertical">
 
     <Button
@@ -17,6 +17,14 @@
     <Button
         android:id="@+id/button_additem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
+        android:layout_margin="10dp"
         android:text="@string/add_items" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="190dp"
+        android:layout_height="192dp"
+        android:layout_margin="10dp"
+        android:src="@drawable/savefood" />
 </LinearLayout>
