--- a/app/src/main/res/layout/activity_main_view_items.xml
+++ b/app/src/main/res/layout/activity_main_view_items.xml
@@ -10,8 +10,11 @@
         android:id="@+id/listView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--    androidx.constraintlayout.widget.ConstraintLayout-->
