--- a/app/src/main/res/layout/activity_main_storage.xml
+++ b/app/src/main/res/layout/activity_main_storage.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_margin="10dp"
+        android:layout_marginTop="30dp"
         android:text="@string/view_all_items" />
 
     <Button
@@ -23,8 +24,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="190dp"
-        android:layout_height="192dp"
+        android:layout_width="327dp"
+        android:layout_height="308dp"
         android:layout_margin="10dp"
         android:src="@drawable/savefood" />
 </LinearLayout>
