--- a/app/src/main/res/layout/activity_main_add_item.xml
+++ b/app/src/main/res/layout/activity_main_add_item.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivityAddItem">
 
     <EditText
-        android:id="@+id/name"
+        android:id="@+id/item_name"
         android:layout_width="375dp"
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
@@ -32,10 +32,11 @@
     <EditText
         android:id="@+id/weight"
         android:layout_width="375dp"
-        android:layout_height="55dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="204dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="487dp"
         android:autofillHints=""
         android:background="@drawable/circurlar_boton"
         android:ems="10"
@@ -44,6 +45,7 @@
         android:minHeight="48dp"
         android:paddingLeft="15dp"
         android:textColorHint="#D6D1D1"
+        app:layout_constraintBottom_toTopOf="@+id/frequency"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +74,6 @@
         android:layout_width="131dp"
         android:layout_height="53dp"
         android:layout_marginStart="124dp"
-        android:layout_marginLeft="124dp"
         android:layout_marginTop="36dp"
         android:shadowColor="#9AA7A8"
         android:text="Submit"
@@ -125,7 +126,7 @@
         android:textColorHint="#000000"
         android:textSize="20dp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/name"
+        app:layout_constraintBottom_toTopOf="@+id/item_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +145,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintTop_toBottomOf="@+id/item_name"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
@@ -191,4 +192,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date1"
         app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/frequency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="126dp"
+        android:hint="Enter Frequency"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/weight" />
 </androidx.constraintlayout.widget.ConstraintLayout>
