--- a/app/src/main/res/layout/activity_main_notes_details.xml
+++ b/app/src/main/res/layout/activity_main_notes_details.xml
@@ -71,4 +71,16 @@
             />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/delete_note_textview_btn"
+        android:text="Delete"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:visibility="gone"
+        android:textColor="#FF0000"/>
+
+
 </RelativeLayout>
